# vscode-xpack-extension-ts

./: .codacy.yml  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README-DEVELOPER.md  README-MAINTAINER.md  README.md  eslint.config.js  package-lock.json  package.json  package.nls.json  tsconfig-common.json  tsconfig.json  webpack.config.js
config/: .prettierignore  eslint.config.js  tsconfig-common.json
src/: extension.ts  index.d.ts  tsconfig.json
src-inspiration/: extension.ts  tasks.ts  tree-view-actions.ts
src-inspiration/test/suite/: index.ts
src/core/: commands.ts  data-model.ts  definitions.ts  explorer.ts  hover.ts  intellisense.ts  manager.ts  status-bar.ts  tasks.ts
src/functions/: utils.ts
src/lib/: commands.ts  common.ts  data-model.ts  definitions.ts  explorer.ts  hover.ts  intellisense.ts  manager.ts  readScripts.ts  status-bar.ts  status.ts  tasks.ts  tree-view-actions.ts  utils.ts  xpack.ts  xpm-liquid.ts
src/test/: runTest.ts
src/test/suite/: extension.test.ts
tests/hello-world-workspace/: CMakeLists.txt  package.json
tests/inherit-workspace/: package.json
tests/multi-workspace/: multi.code-workspace
tests/multi-workspace/hallo-welt/: CMakeLists.txt  LICENSE  package.json
tests/multi-workspace/hallo-welt/include/: hallo-welt.h
tests/multi-workspace/hallo-welt/src/: hallo-welt.cpp
tests/multi-workspace/hello-world/: CMakeLists.txt  package-lock.json  package.json
tests/multi-workspace/hello-world/src/: hello-world.cpp
tests/no-actions/: LICENSE  package-lock.json  package.json
tests/single-workspace/: CMakeLists.txt  package.json
tests/single-workspace/include/: hello-world.h
tests/single-workspace/src/: hello-world.cpp
tests/sub-folder-workspace/: package.json
tests/sub-folder-workspace/tests/: LICENSE  package.json
